add subscription api base path
