# EventRouter/api/subscriptionApi.go
@@ -4,10 +4,10 @@
 // node. The received events will be emitted to the subscriptions in the API. Users can subscribe a callback url where
 // able to receive different types of events.
 //
-//     Schemes: http
+//     Schemes: http, https
 //     Host: localhost:8700
-//     TODO change port
-//     Version: 0.0.1
+//     BasePath: /live/feed/v0.1/
+//     Version: 0.1.0
 //     License: MIT http://opensource.org/licenses/MIT
 //
 // swagger:meta
@@ -21,6 +21,7 @@ import (
 	"github.com/FactomProject/live-feed-api/EventRouter/models/errors"
 	"github.com/gorilla/mux"
 	"net/http"
+	"strings"
 	"time"
 )
 
@@ -49,19 +50,21 @@ func logInterceptor(f http.Handler) http.Handler {
 func (api *api) Start() {
 	router := mux.NewRouter()
 	router.Use(logInterceptor)
-	router.HandleFunc("/subscriptions", subscribe).Methods(http.MethodPost)
-	router.HandleFunc("/subscriptions/{subscriptionId}", unsubscribe).Methods(http.MethodDelete)
-	router.HandleFunc("/subscriptions/{subscriptionId}", getSubscription).Methods(http.MethodGet)
-	router.HandleFunc("/subscriptions/{subscriptionId}", updateSubscription).Methods(http.MethodPut)
-	router.HandleFunc("/swagger.json", swagger).Methods(http.MethodGet)
 	router.Schemes(api.apiConfig.Schemes...)
+
+	subscriptionRouter := router.PathPrefix(api.apiConfig.BasePath).Subrouter()
+	subscriptionRouter.HandleFunc("/subscriptions", subscribe).Methods(http.MethodPost)
+	subscriptionRouter.HandleFunc("/subscriptions/{subscriptionId}", unsubscribe).Methods(http.MethodDelete)
+	subscriptionRouter.HandleFunc("/subscriptions/{subscriptionId}", getSubscription).Methods(http.MethodGet)
+	subscriptionRouter.HandleFunc("/subscriptions/{subscriptionId}", updateSubscription).Methods(http.MethodPut)
+	subscriptionRouter.HandleFunc("/swagger.json", swagger).Methods(http.MethodGet)
 
 	go func() {
 		address := fmt.Sprintf("%s:%d", api.apiConfig.BindAddress, api.apiConfig.Port)
-		log.Info("start subscription api at: %s", address)
+		log.Info("start subscription api at: [%s]://%s%s", strings.Join(api.apiConfig.Schemes, ", "), address, api.apiConfig.BasePath)
 		err := http.ListenAndServe(address, router)
 		if err != nil {
-			log.Error("%v", err)
+			log.Error("failed to start subscription api: %v", err)
 		}
 	}()
 }
