# swagger.json
@@ -1,6 +1,7 @@
 {
   "schemes": [
-    "http"
+    "http",
+    "https"
   ],
   "swagger": "2.0",
   "info": {
@@ -10,9 +11,10 @@
       "name": "MIT",
       "url": "http://opensource.org/licenses/MIT"
     },
-    "version": "0.0.1"
+    "version": "0.1.0"
   },
   "host": "localhost:8700",
+  "basePath": "/live/feed/v0.1/",
   "paths": {
     "/subscriptions": {
       "post": {
